--- a/index.html
+++ b/index.html
@@ -53,60 +53,6 @@
       flex-direction: column;
       gap: 10px;
     }
-    .card {
-      background: #2d2d2d;
-      padding: 10px;
-      border-radius: 5px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-      width: 100%;
-    }
-    .preview-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-    }
-    .preview {
-      max-width: 100%;
-      max-height: 150px;
-      object-fit: contain;
-    }
-    .preview img {
-      border: 1px solid #4d4d4d;
-      border-radius: 3px;
-      max-width: 100%;
-      max-height: 100%;
-    }
-    .thumbnail-container {
-      width: 100%;
-      overflow-x: auto;
-      overflow-y: hidden;
-      max-height: 80px;
-      padding: 5px 0;
-      display: flex;
-      flex-direction: row;
-      gap: 5px;
-      -webkit-overflow-scrolling: touch;
-    }
-    .thumbnail {
-      flex: 0 0 auto;
-      margin: 0;
-      text-align: center;
-      cursor: pointer;
-      min-width: 70px;
-    }
-    .thumbnail img {
-      max-width: 100%;
-      max-height: 70px;
-      border: 1px solid #4d4d4d;
-      border-radius: 3px;
-    }
-    .thumbnail input[type="checkbox"] {
-      margin-right: 5px;
-    }
-    .thumbnail.selected {
-      border: 2px solid #00ff00;
-    }
     .form-group {
       margin-bottom: 15px;
       text-align: left;
@@ -166,6 +112,96 @@
       margin: 5px 0;
       color: #bbb;
       font-size: 0.9rem;
+    }
+    .modal-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+      animation: fadeIn 0.3s ease;
+    }
+    .modal {
+      background: #2d2d2d;
+      padding: 20px;
+      border-radius: 5px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      text-align: center;
+      position: relative;
+    }
+    .modal .card {
+      background: #1e1e1e;
+      padding: 10px;
+      border-radius: 5px;
+      margin-bottom: 10px;
+    }
+    .preview-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+    }
+    .preview {
+      max-width: 100%;
+      max-height: 200px;
+      object-fit: contain;
+    }
+    .preview img {
+      border: 1px solid #4d4d4d;
+      border-radius: 3px;
+      max-width: 100%;
+      max-height: 100%;
+    }
+    .thumbnail-container {
+      width: 100%;
+      overflow-x: auto;
+      overflow-y: hidden;
+      max-height: 80px;
+      padding: 5px 0;
+      display: flex;
+      flex-direction: row;
+      gap: 5px;
+      -webkit-overflow-scrolling: touch;
+    }
+    .thumbnail {
+      flex: 0 0 auto;
+      margin: 0;
+      text-align: center;
+      cursor: pointer;
+      min-width: 70px;
+    }
+    .thumbnail img {
+      max-width: 100%;
+      max-height: 70px;
+      border: 1px solid #4d4d4d;
+      border-radius: 3px;
+    }
+    .thumbnail input[type="checkbox"] {
+      margin-right: 5px;
+    }
+    .thumbnail.selected {
+      border: 2px solid #00ff00;
+    }
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      padding: 5px 10px;
+      background: #ff0000;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .close-btn:hover {
+      background: #cc0000;
     }
     .alert-overlay {
       position: fixed;
@@ -238,7 +274,7 @@
         min-height: 250px;
       }
       .preview {
-        max-height: 200px;
+        max-height: 250px;
       }
       .thumbnail-container {
         max-height: 100px;
@@ -295,7 +331,8 @@
       color: 'bw',
       totalCost: 0,
       error: '',
-      isPrinting: false
+      isPrinting: false,
+      showModal: false
     };
 
     let videoStream = null;
@@ -342,20 +379,9 @@
                 </div>
               ` : state.fileUploaded ? `
                 <div class="form-group">
-                  ${state.imageData ? `
-                    <label>Preview</label>
-                    <canvas id="canvas"></canvas>
-                  ` : state.fileData?.startsWith('data:application/pdf') ? `
-                    <div class="card">
-                      <div class="preview-container">
-                        <div class="preview" id="preview"></div>
-                      </div>
-                    </div>
-                    <div class="thumbnail-container" id="thumbnail-container"></div>
-                  ` : `
-                    <label>File</label>
-                    <p>${state.file}</p>
-                  `}
+                  <label>File</label>
+                  <p>${state.file}</p>
+                  <button class="btn-green" onclick="showDocumentModal()">View Document</button>
                   <label>Copies</label>
                   <input type="number" id="copies" value="${state.copies}" min="1" onchange="updateCopies(this.value)">
                   <label>Color</label>
@@ -398,12 +424,32 @@
             ` : ''}
           </div>
         `;
-        if (state.service === 'print' && state.scanMode) {
-          startVideoStream();
-        } else if (state.service === 'print' && state.imageData) {
-          drawCanvas();
-        } else if (state.service === 'print' && state.fileData?.startsWith('data:application/pdf') && !state.selectedPages.length) {
-          renderPDFPages();
+        if (state.showModal) {
+          const modal = document.createElement('div');
+          modal.className = 'modal-overlay';
+          modal.innerHTML = `
+            <div class="modal">
+              <button class="close-btn" onclick="closeModal()">X</button>
+              ${state.imageData ? `
+                <div class="card">
+                  <div class="preview-container">
+                    <div class="preview"><img src="${state.imageData}" alt="Document Preview"></div>
+                  </div>
+                </div>
+              ` : state.fileData?.startsWith('data:application/pdf') ? `
+                <div class="card">
+                  <div class="preview-container">
+                    <div class="preview" id="preview"></div>
+                  </div>
+                </div>
+                <div class="thumbnail-container" id="thumbnail-container"></div>
+              ` : '<p>No document to display.</p>'}
+            </div>
+          `;
+          document.body.appendChild(modal);
+          if (state.fileData?.startsWith('data:application/pdf') && !state.selectedPages.length) {
+            renderPDFPages();
+          }
         }
       } else if (state.screen === 'summary') {
         app.innerHTML = `
@@ -445,6 +491,18 @@
           document.body.appendChild(alertContainer);
         }
       }
+    }
+
+    // Modal control
+    function showDocumentModal() {
+      state.showModal = true;
+      render();
+    }
+
+    function closeModal() {
+      state.showModal = false;
+      document.querySelector('.modal-overlay')?.remove();
+      render();
     }
 
     // Camera functions
@@ -504,11 +562,11 @@
       state.file = 'scanned_image.png';
       state.fileUploaded = true;
       stopCamera();
-      render();
+      showDocumentModal();
     }
 
     function drawCanvas() {
-      const canvas = document.getElementById('canvas');
+      const canvas = document.querySelector('.modal .preview canvas');
       if (!canvas) return;
       const ctx = canvas.getContext('2d');
       const img = new Image();
@@ -538,7 +596,7 @@
       reader.onload = () => {
         state.fileData = reader.result;
         if (file.type.startsWith('image/')) state.imageData = state.fileData;
-        render();
+        showDocumentModal();
       };
       reader.onerror = () => {
         state.error = 'File read failed.';
@@ -552,8 +610,9 @@
       try {
         const pdf = await loadingTask.promise;
         const numPages = pdf.numPages;
-        const thumbnailContainer = document.getElementById('thumbnail-container');
-        const previewContainer = document.getElementById('preview');
+        const thumbnailContainer = document.querySelector('.modal .thumbnail-container');
+        const previewContainer = document.querySelector('.modal .preview');
+        if (!thumbnailContainer || !previewContainer) return;
         thumbnailContainer.innerHTML = '';
         previewContainer.innerHTML = '';
         for (let pageNum = 1; pageNum <= numPages; pageNum++) {
@@ -613,11 +672,13 @@
       state.fileData = null;
       state.selectedPages = [];
       state.currentPreviewPage = 1;
+      state.showModal = false;
       state.isPrinting = false;
       if (videoStream) {
         videoStream.getTracks().forEach(track => track.stop());
         videoStream = null;
       }
+      document.querySelector('.modal-overlay')?.remove();
       document.querySelector('.alert-overlay')?.remove();
       render();
     }
@@ -635,6 +696,7 @@
       state.color = 'bw';
       state.error = '';
       state.isPrinting = false;
+      document.querySelector('.modal-overlay')?.remove();
       document.querySelector('.alert-overlay')?.remove();
       setScreen('options');
     }
@@ -727,16 +789,29 @@
       render();
     }
 
+    function resetFile() {
+      state.file = null;
+      state.fileUploaded = false;
+      state.imageData = null;
+      state.fileData = null;
+      state.selectedPages = [];
+      state.currentPreviewPage = 1;
+      state.showModal = false;
+      document.querySelector('.modal-overlay')?.remove();
+      render();
+    }
+
     function reset() {
       state = {
         screen: 'menu', service: null, file: null, fileUploaded: false, scanMode: false,
         imageData: null, fileData: null, selectedPages: [], currentPreviewPage: 1,
-        copies: 1, color: 'bw', totalCost: 0, error: '', isPrinting: false
+        copies: 1, color: 'bw', totalCost: 0, error: '', isPrinting: false, showModal: false
       };
       if (videoStream) {
         videoStream.getTracks().forEach(track => track.stop());
         videoStream = null;
       }
+      document.querySelector('.modal-overlay')?.remove();
       document.querySelector('.alert-overlay')?.remove();
       document.getElementById('print-iframe').src = '';
       render();
